2006-11-27  Andrew Cagney  <cagney@redhat.com>

	* frysk3491/x-state.c: Add #include <linux.syscall.h>.

	* frysk3491/x-state.c: New file.
	* Makefile.am (TESTS, noinst_PROGRAMS): Add frysk3491/x-state.
	(frysk3491_x_state_SOURCES, frysk3491_x_state_LDFLAGS): Define.

2006-11-17  Andrew Cagney  <cagney@redhat.com>

	* frysk3525/exit47.c (main): Use a signal to synchronise the
	daemon's exit - avoids race with ptrace continue with signal.

2006-11-16  Andrew Cagney  <cagney@redhat.com>

	* frysk3525/exit47.c (main): Simplify, remove exec and SETOPTIONS.
	
	* frysk3525/exit47.c (waitstatus): Clean up messages, abort when
	fail.
	(ptracer, print_signal, wait_for_signals, send_signal): New.
	(main): Make child a detached daemon, synchronized with a signal.

	* frysk3525/exit47.c: New file, work-in-progress.

2006-11-14  Chris Moller  <moller@mollerware.com>

	* frysk3381/f3381.c: Added a testcase that checks for a kernel bug
	that inhibits kill(pid, SIGKILL) signal delivery to attached
	processes.
	* Makefile.am: Removed frysk3381/reparent.c from TESTS and
	replaced it with frysk3381/f3381.c.

	* frysk3381/reparent-r.c: Added a variation of the test that more
	clearly differences in kernel behaviour by eliminating possible
	race conditions.  This variation is not included in Makefile.am.

2006-11-14  Andrew Cagney  <cagney@redhat.com>

	* frysk3381/reparent.c (main): Permit ECHILD waitpid status.

2006-11-07  Chris Moller  <moller@mollerware.com>

	* frysk3381/reparent.c: Revised test for frysk bug 3381 (RHEL bug
	210693) 
	* Makefile.am: Change frysk3381/reparent.c to PASS.  Also fixed
	typo: TESTS += frysk33811/reparent--an extra trailing '1' in
	frysk33811. 

2006-10-26  Nurdin Premji  <npremji@redhat.com>

	* frysk3228/LoggerParent.java (main): Fixed typo, second ab reference should be ac.

2006-10-24  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Change frysk3381/retrace.c to XFAIL, also fails on
	FC-5.

2006-10-23  Chris Moller  <moller@mollerware.com>
