@@ -1,3 +1,7 @@
+2006-11-29  Andrew Cagney  <cagney@redhat.com>
+
+	* frysk3491/x-state.c: Add copyright notice.
+
 2006-11-27  Andrew Cagney  <cagney@redhat.com>
 
 	* frysk3491/x-state.c: Add #include <linux.syscall.h>.
